@@ -16,6 +16,7 @@ Emulation fixes:
  - GBA Video: Simplify sprite cycle counting (fixes mgba.io/i/1279)
  - GBA Video: Add sprite cycle counting to GL (fixes mgba.io/i/1635)
 Other fixes:
+ - 3DS: Fix framelimiter on newer citro3d (fixes mgba.io/i/1771)
  - ARM: Fix disassembling of several S-type instructions (fixes mgba.io/i/1778)
  - ARM Debugger: Clear low bit on breakpoint addresses (fixes mgba.io/i/1764)
  - CMake: Always use devkitPro toolchain when applicable (fixes mgba.io/i/1755)
